tests/fail/tuple_variant.stderr
error: #[derive(OpenapiType)] does not support tuple variants
 --> $DIR/tuple_variant.rs:5:6
  |
5 |     Pair(i64, i64)
  |         ^^^^^^^^^^
